SQuirreL SQL Client Change Log
==============================


${squirrelsql.changelog.header}

Enhancements:

Graph Plugin:
  Graphs can be copied and pasted.

Graph Plugin:
  New Session toolbar button to create links to Graphs of other JDBC-URLs or to Graphs that are placed arbitrary directories.
  With this feature it is possible to work with shared repositories of Graphs.


Bug fixes:

3026995 Fixed problem in squirrel-sql.bat for 64-bit windows.



3.3.0 (11/20/2011)
==================

Enhancements:

Hibernate Plugin:
  Directories containing archive files (Jars, Zips) can now be added to a Hibernate configuration's classpath.
  All files in the directory will be added as classpath entries.

Hibernate Plugin:
  HQL errors during results reading are now displayed as a result tab. (Similar to the new SQL error display.)

Some performance improvements, when searching in the object tree. 
	Now, Squirrel will not try to expand a node twice, if no children were found for a node at a previous search. 

Updated Translations:
 * French (Erwan Duroselle)
 
The make editable function for SQL result tables now preserves the table's layout (ordering, scrolling position, ... ).

New (prettier acorn) icons bundle for MacOS X (Thanks to Travis Hein for arranging the icon bundle and to the 
original photograher - George Georgiades - for releasing the photo under the creative commons license.)

New default SQL driver for LucidDB (Thanks to Brandon Jackson)
	To use the new default driver, it must be imported (Menu Drivers => Install default driver definitions)  

Improved memory management: Now when SQuirreL runs out of memory, it will attempt to close all result tabs, 
in order to free some memory.  This may allow the user to save their preferences/scripts and restart SQuirreL.

SQL Scripts Plugin: Added the capability to "store the execution result of an SQL query into file". This 