@@ -235,3 +235,5 @@ graph.link.linkDetailsMsg=Link {0} points to Graph {1} in file:
 graph.link.linkDetailsMsg2=The link itself is placed in:
 
 graph.copyGraph=Copy Graph
+
+graph.AddTableAtQursorToGraph.noTable=Could not find a table named:{0}
